@@ -37,6 +37,6 @@ DIST VMware-workstation-6.0.3-80004.i386.tar.gz 222622982 RMD160 84aec387b914427
 DIST VMware-workstation-6.0.3-80004.x86_64.tar.gz 199349808 RMD160 c49340796824dbec67d61f0da0b6533ef368c714 SHA1 e54a659e8937135c2a7e7bb1aa5c65ae4e326aec SHA256 050d6ca278b2ea269a03af8417eb35c0402222be0e855445ef3339c602b74c51
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.5.56455.ebuild 3102 RMD160 a8323412796d4f6d2c97560d756693ed504a5f35 SHA1 4b9204ce3907913f40735d3ec81e4ce78f9adff2 SHA256 9b11fe8b5ee4cd5edc7b0e49a56a9da31019f0fc53f1cc2fca22da8d7dc38f5a
-EBUILD vmware-workstation-5.5.6.80404.ebuild 3242 RMD160 eb6be125ffbafb2b5b315680d8ef923cb8bbca83 SHA1 06859c647c858e45c57a85edcf2906bc13ade0e3 SHA256 9f5192528434c28349d08b76883adcc2600228196461b13291c4778beef42f6f
+EBUILD vmware-workstation-5.5.6.80404.ebuild 3128 RMD160 f21f70d9138cd32482528a6a8c5df1d118092305 SHA1 3f610ee43c287b890fabbb47f99f5a13145d7dcd SHA256 1b8d152a289e8c0f0ffdbd5b7f84da03b41faf7b8c276a80d0ea3d57302e8823
 EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 bdafb06042366e4a05aeb76f6bb2ffef6244c050 SHA1 69df59dc870890cd2c0224a884eaabe52ef5cf0d SHA256 0366a3ba6a3ddea60fcc0f25adf8e014b41ac1c15e258e45e5b832e5321e950b
 EBUILD vmware-workstation-6.0.3.80004.ebuild 4200 RMD160 243b5b5be40ed53bc42d18810b2248141d46a07e SHA1 c3cad0d96886bb808cf00734dac69a693b5c3e25 SHA256 b6f9b3e23cb05f13374777e03f31acb04b35f546d65ef67af9930a79d00cf0ed
