@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  app-emulation/vmware-workstation/vmware-workstation-5.5.6.80404.ebuild:
+  Updated 5.5.6 Workstation ebuild.
+
   30 Mar 2008; Mike Auty <ikelos@gentoo.org>
   app-emulation/open-vm-tools/Manifest:
   Fix open-vm-tools manifest bug 215393.
